[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Ashvin Arsakularatne <ashvin.arsakularatne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.7"
itertools = "0.10.1"
enum-primitive-derive = "^0.2"
num-traits = "^0.1"
num-format = "0.4.0"
crossbeam = "0.8.1"
gcd = "2.0.1"
regex = "^1.5.4"
